--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,12 +1,69 @@
-# You can override the included template(s) by including variable overrides
-# SAST customization: https://docs.gitlab.com/ee/user/application_security/sast/#customizing-the-sast-settings
-# Secret Detection customization: https://docs.gitlab.com/ee/user/application_security/secret_detection/#customizing-settings
-# Dependency Scanning customization: https://docs.gitlab.com/ee/user/application_security/dependency_scanning/#customizing-the-dependency-scanning-settings
-# Note that environment variables can be set in several places
-# See https://docs.gitlab.com/ee/ci/variables/#cicd-variable-precedence
+# Based on: https://blog.callr.tech/building-docker-images-with-gitlab-ci-best-practices/
+image: docker:19
+
 stages:
-- test
-sast:
-  stage: test
-include:
-- template: Security/SAST.gitlab-ci.yml
+  - build
+  - push
+  - deploy
+
+services:
+  - docker:dind
+
+.docker:
+  before_script:
+    - echo -n $CI_JOB_TOKEN | docker login -u gitlab-ci-token --password-stdin $CI_REGISTRY
+
+Build:
+  extends: .docker
+  stage: build
+  when: manual
+  script:
+    - docker pull $CI_REGISTRY_IMAGE:latest || true
+    - >
+      docker build
+      --pull
+      --build-arg VCS_REF=$CI_COMMIT_SHA
+      --build-arg VCS_URL=$CI_PROJECT_URL
+      --cache-from $CI_REGISTRY_IMAGE:latest
+      --tag $CI_REGISTRY_IMAGE:$CI_COMMIT_SHA
+      .
+    - docker push $CI_REGISTRY_IMAGE:$CI_COMMIT_SHA
+
+# deploy DEV:
+#   image:
+#     name: bitnami/kubectl:1.17
+#     entrypoint: [""]
+#   when: manual
+#   stage: deploy
+#   variables:
+#     GIT_STRATEGY: none
+#   environment:
+#     name: development
+#   script:
+#     - kubectl --kubeconfig=$KUBECONFIG -n development set image deployment/ds-smartskills-dev main=$CI_REGISTRY_IMAGE:$CI_COMMIT_SHA
+
+# deploy STAGING:
+#   image:
+#     name: bitnami/kubectl:1.17
+#     entrypoint: [""]
+#   when: manual
+#   stage: deploy
+#   variables:
+#     GIT_STRATEGY: none
+#   environment:
+#     name: staging
+#   script:
+#     - kubectl --kubeconfig=$KUBECONFIG -n staging set image deployment/ds-smartskills-staging main=$CI_REGISTRY_IMAGE:$CI_COMMIT_SHA
+
+deploy ISTIO-PROD:
+  image:
+    name: bitnami/kubectl:1.17
+    entrypoint: [""]
+  when: manual
+  stage: deploy
+  variables:
+    GIT_STRATEGY: none
+  environment:
+    name: production-istio
+  script:
+    - kubectl --kubeconfig=$KUBECONFIG -n production set image deployment/ds-pardot-filter-prod main=$CI_REGISTRY_IMAGE:$CI_COMMIT_SHA
